@@ -72,6 +72,10 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
                             <mainClass>com.mia.apa.Main</mainClass>
+                              <options>
+                                  <option>--add-exports</option>
+                                  <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                              </options>
                           </manifest>
                          </archive>
                     </configuration>
